--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="quick-links">
                 <ul>
                     <li><a href="">Acerca de</a></li>
-                    <li><a href="">Contactanos</a></li>
+                    <li><a href="/contenido/contacto.html">Contactanos</a></li>
                     <li><a href="">Ejemplo 3</a></li>
                 </ul>
             </section>
