--- a/contenido/deportes/skate.html
+++ b/contenido/deportes/skate.html
@@ -157,7 +157,7 @@
                 <div class="ollie">
                     <li>Ollie</li>
                     <p>Es el truco más básico; de él derivan casi todos los demás, pues es la madre de la gran mayoría de los trucos modernos. Consiste en saltar con la tabla sin tomarla con las manos.</p>
-                    <img src="img\ollie-skate.gif" alt="">
+                    <img src="/img/ollie-skate.gif" alt="">
                 </div>
                 <div class="Nollie">
                     <li>Nollie</li>
@@ -177,13 +177,13 @@
                         <p>consiste en meter un 360° shove-it combinado con un body varial de 180º adelante.</p>
                         <p>Para practicar este truco empezaremos haciendo un pop shove it e intentaremos caer con el pie delantero en la parte delantera del nose para poder pivotearlo directamente. Esto nos servirá para cogerle la forma y aprender el movimiento.
                             Una vez aprendido pivoteando, pasaremos a intentarlo completo.</p>
-                        <img src="img\big-spin.gif" alt="">
+                        <img src="/img/big-spin.gif" alt="">
                     </div>
                     <div class="fifty">
                         <li>50-50</li>
                         <p>Son los trucos donde los ejes (trucks) pasan sobre un borde (sea una baranda, una base, un borde metálico, etc.) como por ejemplo el boardslide, lipslide, noseslide, tailslide, feeblegrind, nosegrind, etc.</p> 
                         <p>Los trucos realizados con ambos trucks recibe el nombre de 50-50, con el truck trasero "raspando" el obstáculo y el truck delantero elevado recibe el nombre de 5-0.</p>
-                        <img src="img\50-50.gif" alt="">
+                        <img src="/img/50-50.gif" alt="">
                     </div>
 
                 </ul>    
