--- a/skate.html
+++ b/skate.html
@@ -44,43 +44,44 @@
                 <div class="ollie">
                     <li>Ollie</li>
                     <div class="division-concept">
-
                             <p>Es el truco más básico; de él derivan casi todos los demás, pues es la madre de la gran mayoría de los trucos modernos. Consiste en saltar con la tabla sin tomarla con las manos.</p>
-
                             <img src="img\ollie-skate.gif" alt="">
-
                     </div>    
                 </div>
                 <div class="Nollie">
                     <li>Nollie</li>
-                        <div>
+                        <div class="divison-concept">
                             <p>El Nollie es un truco muy similar al ollie pero más complicado, se trata de elevar la tabla pero pisando el nose (punta delantera) con el pie delantero (el que usas para raspar) por ejemplo: si eres regular (pie izquierdo delante), pones tu pie izquierdo en el nose y el derecho lo usas para raspar, igual que si eres goofy (pie derecho delante) pero al revés, considerandose un Fakie Switch Ollie.</p>
-                        </div>
-                        <div>
                             <img src="img\nollie-skate.gif" alt="">
                         </div>
                 </div>
 
                 <div class="shove-it">
                     <li> Shove-it</li>
-                    <p>tiene dos variantes, el shove-it, y el pop shove-it. El primero consiste en girar la tabla en 180 grados deslizándola sobre el suelo y caer sobre ella. El segundo es levantar la tabla del suelo y hacer el mismo giro de 180 grados.</p>
-                    <img src="img\shove-it.gif" alt="" >
+                    <div class="division-concept">
+                        <p>tiene dos variantes, el shove-it, y el pop shove-it. El primero consiste en girar la tabla en 180 grados deslizándola sobre el suelo y caer sobre ella. El segundo es levantar la tabla del suelo y hacer el mismo giro de 180 grados.</p>
+                        <img src="img\shove-it.gif" alt="" >
+                    </div>
                 </div>
             </ul>
             <div>
                 <ul class="trucos2">
                     <div class="bigspin">
                         <li> Bigspin </li>
-                        <p>consiste en meter un 360° shove-it combinado con un body varial de 180º adelante.</p>
-                        <p>Para practicar este truco empezaremos haciendo un pop shove it e intentaremos caer con el pie delantero en la parte delantera del nose para poder pivotearlo directamente. Esto nos servirá para cogerle la forma y aprender el movimiento.
+                        <div class="divison-concept">
+                            <p>consiste en meter un 360° shove-it combinado con un body varial de 180º adelante.</p>
+                            <p>Para practicar este truco empezaremos haciendo un pop shove it e intentaremos caer con el pie delantero en la parte delantera del nose para poder pivotearlo directamente. Esto nos servirá para cogerle la forma y aprender el movimiento.
                             Una vez aprendido pivoteando, pasaremos a intentarlo completo.</p>
-                        <img src="img\big-spin.gif" alt="">
+                            <img src="img\big-spin.gif" alt="">
+                        </div>
                     </div>
                     <div class="fifty">
                         <li>50-50</li>
+                        <div class="divison-concept">
                         <p>Son los trucos donde los ejes (trucks) pasan sobre un borde (sea una baranda, una base, un borde metálico, etc.) como por ejemplo el boardslide, lipslide, noseslide, tailslide, feeblegrind, nosegrind, etc.</p> 
                         <p>Los trucos realizados con ambos trucks recibe el nombre de 50-50, con el truck trasero "raspando" el obstáculo y el truck delantero elevado recibe el nombre de 5-0.</p>
                         <img src="img\50-50.gif" alt="">
+                        </div>
                     </div>
 
                 </ul>    
