--- a/skate.html
+++ b/skate.html
@@ -69,8 +69,8 @@
                     <div class="bigspin">
                         <li> Bigspin </li>
                         <div class="division-concept">
-                            <p>consiste en meter un 360° shove-it combinado con un body varial de 180º adelante.</p>
-                            <p>Para practicar este truco empezaremos haciendo un pop shove it e intentaremos caer con el pie delantero en la parte delantera del nose para poder pivotearlo directamente. Esto nos servirá para cogerle la forma y aprender el movimiento.
+                            <p>consiste en meter un 360° shove-it combinado con un body varial de 180º adelante.
+                          Para practicar este truco empezaremos haciendo un pop shove it e intentaremos caer con el pie delantero en la parte delantera del nose para poder pivotearlo directamente. Esto nos servirá para cogerle la forma y aprender el movimiento.
                             Una vez aprendido pivoteando, pasaremos a intentarlo completo.</p>
                             <img src="img\big-spin.gif" alt="">
                         </div>
@@ -78,8 +78,8 @@
                     <div class="fifty">
                         <li>50-50</li>
                         <div class="division-concept">
-                        <p>Son los trucos donde los ejes (trucks) pasan sobre un borde (sea una baranda, una base, un borde metálico, etc.) como por ejemplo el boardslide, lipslide, noseslide, tailslide, feeblegrind, nosegrind, etc.</p> 
-                        <p>Los trucos realizados con ambos trucks recibe el nombre de 50-50, con el truck trasero "raspando" el obstáculo y el truck delantero elevado recibe el nombre de 5-0.</p>
+                        <p>Son los trucos donde los ejes (trucks) pasan sobre un borde (sea una baranda, una base, un borde metálico, etc.) como por ejemplo el boardslide, lipslide, noseslide, tailslide, feeblegrind, nosegrind, etc.
+                       Los trucos realizados con ambos trucks recibe el nombre de 50-50, con el truck trasero "raspando" el obstáculo y el truck delantero elevado recibe el nombre de 5-0.</p>
                         <img src="img\50-50.gif" alt="">
                         </div>
                     </div>
