--- a/skate.html
+++ b/skate.html
@@ -45,14 +45,14 @@
                     <li>Ollie</li>
                     <div class="division-concept">
                             <p>Es el truco más básico; de él derivan casi todos los demás, pues es la madre de la gran mayoría de los trucos modernos. Consiste en saltar con la tabla sin tomarla con las manos.</p>
-                            <img src="/img/ollie-skate.gif" alt="">
+                            <img src="img/ollie-skate.gif" alt="">
                     </div>    
                 </div>
                 <div class="Nollie">
                     <li>Nollie</li>
                         <div class="division-concept">
                             <p>El Nollie es un truco muy similar al ollie pero más complicado, se trata de elevar la tabla pero pisando el nose (punta delantera) con el pie delantero (el que usas para raspar) por ejemplo: si eres regular (pie izquierdo delante), pones tu pie izquierdo en el nose y el derecho lo usas para raspar, igual que si eres goofy (pie derecho delante) pero al revés, considerandose un Fakie Switch Ollie.</p>
-                            <img src="/img/nollie-skate.gif" alt="">
+                            <img src="img/nollie-skate.gif" alt="">
                         </div>
                 </div>
 
